--- a/static/styles/sass/main.scss
+++ b/static/styles/sass/main.scss
@@ -2,4 +2,4 @@
 @import 'partials/normalize';
 @import 'partials/variables';
 @import 'partials/helpers';
-@import 'partials/atf';
+@import 'partials/index';
