--- a/static/styles/sass/main.scss
+++ b/static/styles/sass/main.scss
@@ -1,5 +1,4 @@
-// partials
-@import 'partials/normalize';
-@import 'partials/variables';
-@import 'partials/helpers';
-@import 'partials/index';
+// modules
+@import 'modules/variables';
+@import 'modules/helpers';
+@import 'modules/index';
